        offset for the A&D bits.
      NFLOG: Use correct AF code points on all OSes.
      NFS: Avoid printing non-ASCII characters.
      OSPF: Pad TLVs in LS_OPAQUE_TYPE_RI to multiples of 4 bytes.
      OSPF: Update LS-Ack printing not to run off the end of the packet.
      OSPF6: Fix an undefined behavior.
      pflog: use nd_ types in struct pfloghdr.
      pflog: handle all types of pflog files (as best as can be done)
      PPP: Check if there is some data to hexdump.
      PPP: Remove an extra colon before LCP Callback Operation.
      Use the buffer stack for de-escaping PPP; fixes CVE-2024-2397;
        Note: This problem does not affect any tcpdump release.
      PTP: Fix spelling of type SIGNALING, Parse major and minor version
        correctly, Print majorSdoId field instead of just the first bit.
      RIP: Make a couple trivial protocol updates.
      RPKI-Router: Refine length and bounds checks.
      RX: Use the "%Y-%m-%d" date format.
      smbutil.c: Use the "%Y-%m-%d" date format.
      SNMP: Fix two undefined behaviors.
      Text protocols: Fix printing truncation if it is not the case.
      ZEP: Use the "%Y-%m-%d" date format.
      ZMTP: Replace custom code with bittok2str().
    User interface:
      Print the supported time stamp types (-J) to stdout instead of stderr.
      Print the list of data link types (-L) to stdout instead of stderr.
      Use symmetrical quotation characters in error messages.
      Update --version option to print 32/64-bit build and time_t size.
      Improve error messages for invalid interface indexes specified
        with -i.
      Support "3des" as an alias for "des_ede3_cbc" even if the crypto
        library doesn't support adding aliases.
    Source code:
      tcpdump: Fix a memory leak.
      child_cleanup: reap as many child processes as possible.
      Ignore failures when setting the default "any" device DLL to LINUX_SLL2.
      Fix for backends which doesn't support capsicum.